[workspace]
members = ["authenticator","cart_manager", "db_pipeline","kitchen-app", "tuser_interface"]
default-members = ["kitchen-app"]
resolver = "2"


[workspace.dependencies]
argon2 = "0.5.3"
color-eyre = "0.6.5"
thiserror = "2.0.14"
ratatui = {version = "0.29.0", features = ["all-widgets"]}
turso = "0.1.3"
crossterm = "0.29.0" # dependency for ratatui; as the docs say.
tokio = {version = "1.47.1", features = ["full"]}
